1.14 Not Released

 * Use a MANIFEST.SKIP file based on the default file from ExtUtils::Manifest.

 * Format CHANGES according to CPAN::Changes::Spec. Add test file
   t/release-cpan-changes.t.

 * Convert t/03podcov.t -> t/release-pod-coverage.t.

 * Convert t/02pod.t -> t/release-pod.t.

 * Increment version number.

1.13 2017-01-11 pjacklam

 * Reorder entries in CHANGES so newest entries are at the top.

 * Sync test files with Math-BigInt-1.999808.

 * Numerous bug fixes and speed improvements.

1.12 2004-01-05 Tels

 * tests from BigInt v1.68 - 4572 tests

 * require Math::BigInt v1.68

 * hang in test 1635 due to _fac() not handling $x == 0 properly

 * _lsft() created non-chunked sizes (thus failures in broot())

 * streamlined code (removed return statements etc)

 * _as_hex() and _as_bin() handle the $x == 0 case properly

 * _pow() handles 0 ** Y properly

 * __reduce() check for Y's size in _gcd() was wrongly checking $x->Size()

 * _check() method checks for non-chunked sizes

1.11_01 2002-09-30 Tels (never released)

 * require Bit::Vector 6.3

 * removed unused binary GCD algorithmn

 * removed unnecc. tests for $x or $y == 0 since Bit::Vector 6.3 handles these

1.11 2002-03-24 Tels

 * tests from BigInt v1.60 - 4057 tests

1.10 2002-03-24 Tels

 * tests from BigInt v1.55 - 3877 tests

1.09 2002-02-21 Tels

 * tests from BigInt v1.51

 * replaced _core_lib() by config()->{lib}

1.08 2002-02-19 Tels

 * added _fac() for factorial speed improvements

 * streamlined some functions (removed return)

 * _mul() does no longer create a result of max($m,$n)*2, but a $m+$n+2 bits
   Quite some performance gains when $m much is greater/smaller than $n.
   The improvement for small numbers is due to the saved call to max()

        Sat Feb 16 19:12:04 2002 Numbers are relative to v1.50_BitVect_v1.07,
                                 100 denotes 100%.

                            |    v1.50
                            |  BitVect